# translate.lang

./: .gitignore  Cargo.toml  README.md  en_US.lang  rerun.sh
src/: main.rs
