[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[package]
name = "trans-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
clap = "4.5.2"
hf-hub = "0.3.2"
regex = "1.10.3"
serde_json = "1.0.114"
tokenizers = "0.15.2"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
